force-app/main/default/objects/Territory_Assignment__mdt/Territory_Assignment__mdt.object-meta.xml
<CustomObject>
    <label>담당자 배정 규칙</label>
    <pluralLabel>담당자 배정 규칙</pluralLabel>
</CustomObject>