force-app/main/default/objects/Territory_Assignment__mdt/fields/Assigned_Rep_Username__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep_Username__c</fullName>
    <label>담당자 Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>