force-app/main/default/objects/Territory_Assignment__mdt/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>지역</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울/경기</fullName>
            </value>
            <value>
                <fullName>강원/충청</fullName>
            </value>
            <value>
                <fullName>경상</fullName>
            </value>
            <value>
                <fullName>전라</fullName>
            </value>
            <value>
                <fullName>제주</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>