force-app/main/default/objects/Territory_Assignment__mdt/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>회사 규모</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-50명</fullName>
                <default>true</default>
                <label>1-50명</label>
            </value>
            <value>
                <fullName>51-200명</fullName>
            </value>
            <value>
                <fullName>201-1000명</fullName>
            </value>
            <value>
                <fullName>1001명 이상</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>